# hyprNixos

./: .gitignore  .sops.yaml  AGENTS.md  POWER_MANAGEMENT_SUMMARY.md  README.md  demo_terminal_features.md  flake.nix  result  steps.md
.cursor/: mcp.json
.cursor/rules/: global.mdc
asuraLaptop/ags/: ags.nix
asuraLaptop/ambxst/: .gitignore  ai.json  binds.json  cli.sh  home.nix  install.sh  shell.qml  system.json
asuraLaptop/hyprland/: bindings.nix  default.nix  hyprlock.nix  lock-wallpaper-sync.nix  wallpaper-manager.nix
asuraLaptop/secrets/: ambxst-ai.yaml
asuraLaptop/system/: audio.nix  (+24 more)
asuraPc/vibeshellREzero/: README.md  flake.nix  meson.build  package.nix
asuraPc/vibeshellREzero/config/: default.toml
asuraPc/vibeshellREzero/docs/: architecture.md  benchmarks.md  feature-parity.md  testing.md
asuraPc/vibeshellREzero/protocols/: wlr-layer-shell-unstable-v1.xml
asuraPc/vibeshellREzero/scripts/: benchmark.sh  build.sh  capture.sh  run.sh  test.sh
asuraPc/vibeshellREzero/src/: main.cpp
asuraPc/vibeshellREzero/src/app/: application.cpp  application.hpp
asuraPc/vibeshellREzero/src/ipc/: ipc_server.cpp  ipc_server.hpp
asuraPc/vibeshellREzero/src/renderer/: renderer.cpp  renderer.hpp
asuraPc/vibeshellREzero/src/state/: config.cpp  config.hpp  hyprland_ipc.cpp  hyprland_ipc.hpp  shell_state.cpp  shell_state.hpp
asuraPc/vibeshellREzero/src/utils/: log.hpp
asuraPc/vibeshellREzero/src/wayland/: wayland_shell.cpp  wayland_shell.hpp  xdg_popup_stub.c
docs/: AMBXST_OPENCLAW_GUIDE.md  QUICKSHELL_BINDINGS.md  SECURE_BOOT.md  SHELL_PERFORMANCE_RECORD.md  VALIDATION.md  VIBESHELL_OPENCLAW_GUIDE.md
home/: default.nix
hosts/: default.nix
scripts/: switch-shell
system/: default.nix
x11qtile/: README.md  default.nix
(+250 files in other folders)
